@@ -33,9 +33,9 @@ $cmd->stdout_is_eq("google-public-dns-a.google.com (8.8.8.8) is alive\n");
 $cmd->stderr_is_eq("");
 }
 
-# fping -A -n
+# fping -4 -A -n
 {
-my $cmd = Test::Command->new(cmd => "fping -A -n google-public-dns-a.google.com");
+my $cmd = Test::Command->new(cmd => "fping -4 -A -n google-public-dns-a.google.com");
 $cmd->exit_is_num(0);
 $cmd->stdout_is_eq("google-public-dns-a.google.com (8.8.8.8) is alive\n");
 $cmd->stderr_is_eq("");
@@ -46,7 +46,7 @@ SKIP: {
     if(system("/sbin/ifconfig | grep inet6.*Scope:Global") != 0) {
         skip 'No IPv6 on this host', 3;
     }
-    my $cmd = Test::Command->new(cmd => "fping -n -A 2001:4860:4860::8888");
+    my $cmd = Test::Command->new(cmd => "fping -6 -n -A google-public-dns-a.google.com");
     $cmd->exit_is_num(0);
     $cmd->stdout_is_eq("google-public-dns-a.google.com (2001:4860:4860::8888) is alive\n");
     $cmd->stderr_is_eq("");
