@@ -1,9 +1,15 @@
 Unreleased
+  * (feature) Unified 'fping' and 'fping6' into one binary
+  * (feature) New option '-4' to force IPv4
+  * (feature) New option '-6' to force IPv6
   * (feature) Support kernel-timestamping of received packets (#46)
   * (feature) Simplify restrictions: only -i >= 1 and -p >= 10 are enforced now
+  * (bugfix) Fix option -H (ttl) for IPv6
+  * (bugfix) Fix option -M (don't fragment) for IPv6
+  * (bugfix) Fix option -O (ToS) for IPv6
   * (bugfix) Fix compatibility issue with AIX (#69, @blentzgh)
-  * (bugfix) Fix -q not suppressing some ICMP error messages (#83)
-  * (bugfix) Fix -M expecting an argument, when it shouldn't
+  * (bugfix) Fix option -q not suppressing some ICMP error messages (#83)
+  * (bugfix) Fix option -M expecting an argument, when it shouldn't
   * (bugfix) Fix minor issues found by Coverity Scan
 
 2017-01-11  David Schweikert  <david@schweikert.ch>
